# replayable

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.claude/commands/: checkpoint.md  feature.md  fix.md  sync.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
crates/: Cargo.toml
crates/replayable-proxy/: Cargo.toml  README.md
crates/replayable-proxy/benches/: proxy_overhead.rs
crates/replayable-proxy/src/: config.rs  lib.rs  main.rs  proxy.rs  server.rs  shutdown.rs  trace.rs
crates/replayable-proxy/tests/: backpressure.rs  client_disconnect.rs  graceful_shutdown.rs  header_passthrough.rs  integration.rs  multi_value_response_headers.rs  security.rs  streaming_fidelity.rs
crates/replayable-proxy/tests/common/: mod.rs
docs/: ARCHITECTURE.md  DEPLOY_PLAN_l4-proxy-v0.1.0.md  PRD.md  PR_DESCRIPTION_l4-proxy-mvp.md  SCREENSHOT_NEEDS.md  SECURITY_REVIEW_l4-proxy-v0.1.0.md  STYLE.md  v0.1.1-followups.md
docs/adr/: 0001-canonical-trace-schema.md  0002-storage-architecture.md  0003-l4-proxy-language-and-design.md  0004-language-choices-by-component.md  0005-replay-determinism-and-counterfactuals.md  0006-eval-execution-model.md
go/: go.work
go/cli/: README.md  go.mod  main.go  main_test.go
go/collector/: README.md  go.mod  main.go  main_test.go
infra/: Dockerfile.proxy  README.md  docker-compose.yml
python/: pyproject.toml
python/adapters/crewai/: README.md  pyproject.toml
python/adapters/crewai/src/replayable_crewai/: __init__.py
python/adapters/langgraph/: README.md  pyproject.toml
python/adapters/langgraph/src/replayable_langgraph/: __init__.py
python/adapters/llamaindex/: README.md  pyproject.toml
python/adapters/llamaindex/src/replayable_llamaindex/: __init__.py
python/adapters/openai-agents/: README.md  pyproject.toml
python/adapters/openai-agents/src/replayable_openai_agents/: __init__.py
python/sdk/: README.md  pyproject.toml
python/sdk/src/replayable/: __init__.py  trace.py
python/sdk/tests/: test_version.py
python/server/: README.md  pyproject.toml
python/server/src/replayable_server/: __init__.py  main.py
python/server/tests/: test_healthz.py
research/: 01-competitive-landscape.json  02-framework-agnostic-tracing.json  03-otel-genai.json  04-hermes-format.json  05-nemo-agent-toolkit.json  06-multilang-competitors.json  07-otel-lang-coverage.json  08-frameworks-by-language.json  09-competitor-latency.json  10-otel-perf.json  11-proxy-streaming-latency.json  12-agent-eval-sota.json  13-eval-frameworks.json  14-judge-action-agents.json  SYNTHESIS.md
ts/: package.json  pnpm-workspace.yaml  tsconfig.base.json
ts/adapters/mastra/: README.md  package.json
ts/adapters/mastra/src/: index.ts
ts/adapters/vercel-ai/: README.md  package.json
ts/adapters/vercel-ai/src/: index.ts
ts/sdk/: README.md  package.json  tsconfig.json
ts/sdk/src/: index.ts
ts/sdk/tests/: version.test.ts
ui/: README.md  next.config.js  package.json  vitest.config.ts
ui/app/: layout.tsx  page.tsx
ui/tests/: smoke.test.tsx
