[project]
name = "replayable"
version = "0.0.1"
description = "Replayable Python SDK — language- and framework-agnostic agent trace capture"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Replayable Contributors" }]
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/replayable"]
