[project]
name = "replayable-server"
version = "0.0.1"
description = "Replayable API server, replay engine, and eval engine"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "replayable",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/replayable_server"]

[tool.uv.sources]
replayable = { workspace = true }
