[project]
name = "replayable-llamaindex"
version = "0.0.1"
description = "Replayable L2 adapter for LlamaIndex (thin enricher over OpenInference)"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = ["replayable"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/replayable_llamaindex"]

[tool.uv.sources]
replayable = { workspace = true }
